# Arebot

./: .gitignore  readme.md
devel/: .catkin  setup.sh
devel/include/arebot_base/: MotorPIDConfig.h
devel/include/arebot_calib/: CalibrateAngularConfig.h  CalibrateLinearConfig.h
devel/include/arebot_control/: BusOp.h  BusOpRequest.h  BusOpResponse.h
devel/include/arebot_nav/: CalibrateAngularConfig.h
devel/include/ls01b_v2/: FilterConfig.h  resolution.h  resolutionRequest.h  resolutionResponse.h
devel/include/rikirobot_nav/: CalibrateLinearConfig.h
devel/lib/atlas_cam/: atlas_cam
devel/lib/carto_save/: carto_save
devel/lib/cmd_vel_calib/: cmd_vel_calib_node
devel/lib/imu_calib/: apply_calib  do_calib
devel/lib/imu_filter_madgwick/: imu_filter_node
devel/lib/ls01b_v2/: ls01b_v2
devel/lib/ls01d/: ls01d
devel/lib/pkgconfig/: ls01d.pc  (+19 more)
src/robot/arebot_correction/arebot_calib/: CMakeLists.txt  package.xml
src/robot/arebot_correction/arebot_calib/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
src/robot/arebot_correction/arebot_calib/nodes/: calibrate_angular.py  calibrate_linear.py  odom_out_and_back.py  timed_out_and_back.py
src/robot/arebot_correction/arebot_calib/src/: arebot_calib_save.cpp  arebot_navi_get.cpp  arebot_navi_save.cpp
src/robot/arebot_slam/: package.xml
src/robot/arebot_slam/config/: arebot.lua  carto.lua
src/robot/arebot_slam/launch/: carto_save.launch  pbstream_to_map.launch  save_carto_atlas.launch  slam.launch  slam_base.launch  slam_carto.launch
src/robot/arebot_slam/scripts/: save_carto.sh  save_carto_atlas.py
(+221 files in other folders)
